--- a/client/nixpacks.toml
+++ b/client/nixpacks.toml
@@ -1,5 +1,5 @@
-[phases.setup]
-nixPkgs = ["nodejs_22", "npm-10_x"]
+# Let Railway auto-detect Node.js version from package.json
+# Using simpler config for better compatibility
 
 [phases.install]
 cmds = ["npm ci"]
