Trigger server redeploy - Phase 2 routes

--- a/client/railway.toml
+++ b/client/railway.toml
@@ -1,5 +1,9 @@
 [build]
 builder = "nixpacks"
+watchPatterns = ["client/**"]
+
+[build.nixpacks]
+nixPkgs = ["nodejs_20"]
 
 [deploy]
 startCommand = "npm start"
