Fix registration button - show Unregister for signed up users

--- a/server/.env.example
+++ b/server/.env.example
@@ -24,5 +24,13 @@ GOOGLE_CALLBACK_URL=http://localhost:3001/api/auth/google/callback
 # Lightning Auth
 LIGHTNING_AUTH_URL=http://localhost:3001/api/auth/lightning
 
+# Voltage LND Node (for Lightning withdrawals)
+# Get these from your Voltage dashboard
+VOLTAGE_REST_HOST=https://your-node.voltage.cloud:8080
+VOLTAGE_MACAROON=your-admin-macaroon-hex-encoded
+
+# LNURL Base URL (for withdrawal callbacks - should be your public API URL)
+LNURL_BASE_URL=http://localhost:3001/api
+
 # Session Secret (for passport)
 SESSION_SECRET=your-session-secret-change-in-production
