--- a/server/nixpacks.toml
+++ b/server/nixpacks.toml
@@ -8,4 +8,4 @@ cmds = ["npm ci", "npx prisma generate"]
 cmds = ["npm run build"]
 
 [start]
-cmd = "(timeout 60 npx prisma migrate deploy || echo 'Migration warning - continuing anyway') && npm start"
+cmd = "npx prisma migrate deploy; npm start"
