--- a/server/nixpacks.toml
+++ b/server/nixpacks.toml
@@ -5,7 +5,7 @@ nixPkgs = ["nodejs-18_x", "npm-9_x"]
 cmds = ["npm ci", "npx prisma generate"]
 
 [phases.build]
-cmds = ["npm run build", "npx prisma migrate deploy"]
+cmds = ["npm run build"]
 
 [start]
-cmd = "npm start"
+cmd = "npx prisma migrate deploy && npm start"
