feat: lightning login improvements + test suite
- Fix high-S signature rejection (strict: false for secp256k1.verify)
- Fix cleanup race condition (keep verified challenges 10min after expiry)
- Derive LIGHTNING_AUTH_URL from LNURL_BASE_URL as fallback
- Add startup warning when no auth URL env vars are set
- Add comprehensive E2E test suite (20 tests)

--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "test:lightning": "ts-node-dev --transpile-only scripts/test-lightning-login.ts"
   },
   "keywords": [
     "poker",
