--- a/server/.env.example
+++ b/server/.env.example
@@ -21,7 +21,7 @@ GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 GOOGLE_CALLBACK_URL=http://localhost:3001/api/auth/google/callback
 
-# Lightning Auth
+# Lightning Auth (if not set, derived from LNURL_BASE_URL + /auth/lightning)
 LIGHTNING_AUTH_URL=http://localhost:3001/api/auth/lightning
 
 # Voltage LND Node (for Lightning withdrawals)
