fix: use semicolon in start command so server starts even if migration fails

--- a/server/railway.toml
+++ b/server/railway.toml
@@ -6,7 +6,7 @@ installCmd = "npm ci && npx prisma generate"
 buildCmd = "npm run build"
 
 [deploy]
-startCommand = "npx prisma migrate deploy && npm start"
+startCommand = "npx prisma migrate deploy; npm start"
 healthcheckPath = "/api/health"
 healthcheckTimeout = 120
 restartPolicyType = "on_failure"
