Add visibility toggles for Telegram, Nostr, and social links on player profiles
- Add telegramVisibility, socialLinksVisibility fields (migration 20260220140000)
- Add nostrPubkey, nostrVisibility fields with ADMIN_ONLY defaults (migration 20260220150000)
- Server respects visibility when building public player profiles
- Profile page shows toggle switches for Telegram + Nostr visibility
- Profile page view mode shows public/admin-only badges
- Public player profile page displays nostr pubkey when PUBLIC
- All visibility fields default to ADMIN_ONLY for privacy-by-default

--- a/client/nixpacks.toml
+++ b/client/nixpacks.toml
@@ -1,6 +1,3 @@
-# Nixpacks configuration for Next.js
-# Railway will auto-detect Node.js from package.json
-
 [phases.setup]
 nixPkgs = ["nodejs_20"]
 
@@ -11,4 +8,4 @@ cmds = ["npm ci"]
 cmds = ["npm run build"]
 
 [start]
-cmd = "npm start"
+cmd = "node .next/standalone/server.js"
