--- a/server/nixpacks.toml
+++ b/server/nixpacks.toml
@@ -1,8 +1,8 @@
 [phases.setup]
-nixPkgs = ["nodejs-18_x", "npm-9_x"]
+nixPkgs = ["nodejs_20"]
 
 [phases.install]
-cmds = ["npm ci", "npx prisma generate"]
+cmds = ["npm ci"]
 
 [phases.build]
 cmds = ["npm run build"]
