fix: set HOSTNAME=0.0.0.0 for Next.js standalone on Railway

--- a/client/railway.toml
+++ b/client/railway.toml
@@ -3,7 +3,7 @@ builder = "nixpacks"
 watchPatterns = ["client/**"]
 
 [deploy]
-  startCommand = "node .next/standalone/server.js"
+  startCommand = "HOSTNAME=0.0.0.0 node .next/standalone/server.js"
 healthcheckPath = "/"
 healthcheckTimeout = 100
 restartPolicyType = "on_failure"
